fix listing alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -195,13 +195,13 @@ footer {
 
 /* listing cards */
 .listing-card{
+    height: 550px !important;
     border: none !important;
     margin-bottom: 2.5rem !important;
     margin-left: 2rem !important;
     
 }
 .card{
-    
     margin-left: 15px;
     margin-bottom: 40px !important;
     padding: 25px !important;
@@ -228,11 +228,22 @@ footer {
     border-radius: 1rem!important;
     width: 100% !important;
     object-fit: cover !important;
+    height: 13rem !important;
 }
 .card-text{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
     font-weight: 200 !important;
 }
+.dsc{
+  height: 1rem !important;
+}
+
+.show_btn{
+  position: absolute;
+  bottom: 1.2rem !important;
+}
+
+
 
 .alert {
     position: relative;
